limit facebook title container lenght to avoid overlapping with source tag

--- a/front-end/src/components/newsfeed-view/news-list/card-group/news-card/social-media-card.module.scss
+++ b/front-end/src/components/newsfeed-view/news-list/card-group/news-card/social-media-card.module.scss
@@ -53,7 +53,7 @@ $events-source-bg: #db3db0;
             &:focus {
                 text-decoration: none;
             }
-            
+
             div {
                 margin: auto 0 auto 0.8rem;
                 margin-left: 0.8rem;
@@ -127,8 +127,11 @@ $events-source-bg: #db3db0;
             background-color: $facebook-source-bg;
         }
 
-        .content-source img {
+        .content-source {
+            width: calc(100% - 8.5rem);
+            img {
             @include avatar_dim(3.2rem);
+            }
         }
     }
 
